# zerodha-trading-openenv

./: Dockerfile  README.md  openenv.yaml  pyproject.toml
server/: requirements.txt
zerodha_trading_env/: environment.py  inference.py  models.py  validate.py
zerodha_trading_env/data/: instruments.py  loader.py
zerodha_trading_env/graders/: task1_grader.py  task2_grader.py  task3_grader.py
zerodha_trading_env/server/: app.py
