[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "zerodha-trading-env"
version = "0.1.0"
description = "OpenEnv trading environment using real Zerodha instrument data"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "yfinance>=0.2.38",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["zerodha_trading_env*"]
